--- a/en/theme/material/partials/header.html
+++ b/en/theme/material/partials/header.html
@@ -31,6 +31,7 @@
       {% set icon = config.theme.icon.menu or "material/menu" %}
       {% include ".icons/" ~ icon ~ ".svg" %}
     </label>
+      {% set is_version = config.extra.is_version %}
     <div class="md-header__title" data-md-component="header-title">
       <div class="md-header__ellipsis">
         <div class="md-header__topic">
@@ -47,6 +48,17 @@
             {% endif %}
           </span>
         </div>
+      </div>
+    </div>
+     <div class="md-header__title" data-md-component="header-title">
+      <div class="md-header__ellipsis">
+        {% if config.extra.is_version != 'versions' %}
+          {% if "navigation.tabs.sticky" in features %}
+              {% if "navigation.tabs" in features %}
+              {% include "partials/tabs.html" %}
+              {% endif %}
+          {% endif %}
+        {% endif %}
       </div>
     </div>
 {% if "material/search" in config.plugins and not page.is_homepage %}
