Add leaf nav link path navigation

--- a/en/theme/material/partials/nav.html
+++ b/en/theme/material/partials/nav.html
@@ -43,7 +43,7 @@
       aria-label="{{ config.site_name }}"
       data-md-component="logo"
     >
-      
+      {% include "partials/logo.html" %}
     </a>
     {{ config.site_name }}
   </label>
